--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,7 @@
   background-color: var(--light);
   color: var(--dark);
   border-radius: 50%;
+  width: 3rem;
 }
 
 #dark-mode:hover {
@@ -34,7 +35,8 @@
   #dark-mode {
     font-size: 1.5rem;
     margin-left: -95%;
-    margin-top: -10px
+    margin-top: -10px;
+    width: 2.5rem;
   }
 
   #title {
@@ -52,6 +54,7 @@
     font-size: 1.75rem;
     margin-left: -95%;
     margin-top: -5px;
+    width: 2.75rem;
   }
 }
 @media (min-width: 1080px) {
