--- a/src/components/List.css
+++ b/src/components/List.css
@@ -2,7 +2,6 @@ h2 {
     color: var(--dark);
     font-family: 'Teko', sans-serif;
     font-weight: regular;
-    font-size: 2rem
 }
 
 #item-list {
@@ -19,7 +18,6 @@ h2 {
     color: var(--dark);
     font-family: 'Teko', sans-serif;
     font-weight: lighter;
-    font-size: 1.5rem;
     border: var(--dark) 3px solid;
     border-radius: 15px;
     width: 95%;
@@ -45,30 +43,39 @@ h2 {
 
 @media (min-width: 0px) {  
     h2 {
-      font-size: 1.5rem;
+      font-size: 2rem;
     }
 
     #item-list {
         grid-template-columns: 1fr;
     }
+    .list-button {
+      font-size: 1.5rem;
+    }
   }
   
   @media (min-width: 640px) {
     h2 {
-      font-size: 1.75rem;
+      font-size: 2.5rem;
     }
 
     #item-list {
         grid-template-columns: 1fr 1fr;
+    }
+    .list-button {
+      font-size: 2rem;
     }
   }
   
   @media (min-width: 1080px) {
     h2 {
-      font-size: 2.0rem;
+      font-size: 3rem;
     }
 
     #item-list {
         grid-template-columns: 1fr 1fr;
+    }
+    .list-button {
+      font-size: 2.5rem;
     }
   }
